fix horizontal scroll of code and images

--- a/css/default.css
+++ b/css/default.css
@@ -46,6 +46,7 @@ footer {
 
 img {
     max-width: 100%;
+    overflow: auto;
 }
 
 footer > nav {
