--- a/css/syntax.css
+++ b/css/syntax.css
@@ -2,9 +2,10 @@ pre {
   background-color: #1d1f21;
   border-radius: 20px;
   padding: 20px;
+  overflow: auto;
 }
 
-pre code {
+pre > code {
     color: #ffffff;
     font-family: 'Source Code Pro', monospace;
     font-size: 85%;
